--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <overwrite>true</overwrite>
+                            <target>
+                                <echo>Using env.test.properties</echo>
+                                <copy file="${project.basedir}/src/testdata/address-book.csv" tofile="${basedir}/target/testdata/address-book.csv"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
